# python-cli-tools

./: .flake8  CHANGELOG.md  README.md  project_structure.txt  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml  tests.yml
docs/: usage_examples.md
file_organizer/: __init__.py  file_organizer.py
file_organizer/tests/: __init__.py  test_file_organizer.py
password_generator/: password_generator.py
password_generator/tests/: test_password_generator.py
src/weather_cli/: weather_cli.py
tests/: test_password_generator.py  test_weather_cli.py
weather_cli/: weather_cli.py
weather_cli/tests/: test_weather_cli.py
wheel/password_generator/: password_generator.py
wheel/python_cli_tools-0.2.1.dist-info/: METADATA  RECORD  top_level.txt
wheel/weather_cli/: weather_cli.py
wheelmeta/file_organizer/: file_organizer.py
wheelmeta/python_cli_tools-0.2.5.dist-info/: METADATA  RECORD  entry_points.txt
