[build-system]
requires = ["setuptools==67.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python_cli_tools"
version = "0.2.5"
description = "A collection of practical Python CLI tools"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "Åukasz Perek" }
]
requires-python = ">=3.10"

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
  "Topic :: Utilities",
]

dependencies = [
  "requests>=2.31.0",
]

keywords = ["cli", "tools", "utilities", "command-line", "python"]

[project.urls]
Homepage = "https://github.com/wrogistefan/python-cli-tools"
Repository = "https://github.com/wrogistefan/python-cli-tools"
Changelog = "https://github.com/wrogistefan/python-cli-tools/blob/main/CHANGELOG.md"

[project.scripts]
file-organizer = "file_organizer.file_organizer:main"
password-generator = "password_generator.password_generator:main"
weather-cli = "weather_cli.weather_cli:main"

[tool.setuptools.packages.find]
where = ["src"]
