[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-cli-tools"
version = "0.2.6"
description = "A collection of lightweight, production-ready Python CLI utilities."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }

authors = [
    { name = "Łukasz Perek", email = "lukasz.perek@outlook.com" }
]

keywords = ["cli", "tools", "utilities", "python", "command-line"]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Topic :: Utilities"
]

dependencies = []

[project.urls]
Homepage = "https://github.com/wrogistefan/python-cli-tools"
Repository = "https://github.com/wrogistefan/python-cli-tools"
Issues = "https://github.com/wrogistefan/python-cli-tools/issues"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "build",
    "twine",
    "ruff",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["file_organizer", "password_generator", "weather_cli"]
